<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.ebi.spot</groupId>
    <artifactId>atlas-rdf</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>core-model</module>
        <module>rdf-builder</module>
        <module>atlas-dao</module>
        <module>atlas-sparqlapp</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.5</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>coconut.ebi.ac.uk</id>
            <name>coconut.ebi.ac.uk</name>
            <url>http://coconut.ebi.ac.uk:8081/artifactory/local-repo</url>
        </repository>
        <repository>
            <id>ebi-nexus</id>
            <name>Nexus</name>
            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
        </repository>
        <repository>
            <id>ebi-atlas</id>
            <name>Atlas</name>
            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/atlas-repos</url>
        </repository>
        <repository>
            <id>ebi-repo</id>
            <name>The EBI internal repository</name>
            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo/</url>
        </repository>
        <repository>
            <id>ebi-snapshot-repo</id>
            <name>The EBI internal snapshot repository</name>
            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo-snapshots/</url>
        </repository>
    </repositories>

    <profiles>

        <profile>
           <id>local</id>
           <activation>
               <activeByDefault>true</activeByDefault>
           </activation>
            <properties>
                <java.location>java</java.location>

                <java.args>-Xmx1000M</java.args>
                <ui.sparql.endpoint>rdf-hx-01.ebi.ac.uk</ui.sparql.endpoint>
                <ui.sparql.endpoint.port>1119</ui.sparql.endpoint.port>
                <ui.sparql.endpoint.max>-1</ui.sparql.endpoint.max>
            </properties>
       </profile>

        <profile>
           <id>fgservers-dev</id>
           <activation>
               <activeByDefault>false</activeByDefault>
           </activation>
            <properties>
                <data.files.location>/nfs/public/ro/fg/atlas/experiments</data.files.location>

                <java.location>/ebi/research/software/Linux_x86_64/opt/java/jdk1.7/bin/java</java.location>

                <java.args>-Xmx16000M -XX:+UseConcMarkSweepGC -Dhttp.proxyHost=wwwcache.ebi.ac.uk -Dhttp.proxyPort=3128 -Dhttp.nonProxyHosts=*.ebi.ac.uk
                    -DproxySet=true
                </java.args>
            </properties>
       </profile>

    </profiles>

</project>